# mai-cs-labs

./: readme.md
1sem/: .gitignore
1sem/000. ОТЧЁТЫ КП/: readme.md
1sem/001. Лаба_UNIX/: readme.md  Отчет.txt
1sem/003. Лаба_ДТ/: add_one  number_of_unique_letters
1sem/004. Лаба_НАМ (7)/: task16.nma  task16.txt
1sem/005. C (9)/: 16.c  16_main.c  16_main.out  16_mini.c  16_mini.out  16_render.out  Makefile  readme.md  render.out  wn_render.c  wn_render.out
1sem/006/: readme.md
1sem/006. C_files/: .gitignore  Makefile  low_letter_words_max.c  low_letter_words_max_ru.c  readme.md  sample_input.txt  sample_result.txt  short_words.c  short_words_max.c
1sem/007. C (15)/: Makefile  main.c
1sem/008. C set (13)/: input.txt  input_1.txt  lesson.c  main.c  main.out
1sem/009. C matrix (14-15)/: Matrix.c  Matrix.h  main.c  main.out  test.py
1sem/CourseProject_001_MT/: 16.txt  readme.md  конъюкция.mt  конъюкция_2.txt
1sem/CourseProject_002_DT/: copy
1sem/LAB_002_C_isPointInArea/: 16_mini.c  aboutMakefile.md  wn_render.c
1sem/LAB_003_C_Strings&Files/: Makefile  low_letter_words.c  short_words.c
1sem/LAB_005_C_Set/: Makefile
1sem/LAB_006_007_C_Matrix/: Makefile  Matrix.c  Matrix.h  main.c  test.py
1sem/__Reports__/: readme.md
2sem/CourseProject_001_SQB/: .gitignore  CMakeLists.txt  SQByte.c  SQByte.h  StudentData.c  StudentData.h  a.out  main.c  readme.md
2sem/CourseProject_001_SQB/sqbyte/: CMakeLists.txt  SQByte.c  SQByte.h  readme.md
2sem/CourseProject_001_SQB/src/: StudentData.h  fillfromkeyboard.c  generator.c  reader.c  searcher.c
(+36 files in other folders)
